HMCLCore/src/test/resources/crash-report/need_jdk113.txt
2023-08-30 18:52:46,932 main ERROR Error processing element Queue ([Appenders: null]): CLASS_NOT_FOUND
[18:52:47] [main/INFO]: ModLauncher running: args [--username, zq118, --version, 龙之冒险v3.4, --gameDir, C:\Users\张启\Desktop\.minecraft\versions\龙之冒险v3.4, --assetsDir, C:\Users\张启\Desktop\.minecraft\assets, --assetIndex, 1.16, --uuid, 17469630b6544c149f3fb407190c1794, --accessToken, ❄❄❄❄❄❄❄❄, --userType, msa, --versionType, HMCL 3.5.5, --width, 854, --height, 480, --launchTarget, fmlclient, --fml.forgeVersion, 36.2.35, --fml.mcVersion, 1.16.5, --fml.forgeGroup, net.minecraftforge, --fml.mcpVersion, 20210115.111550]
[18:52:47] [main/INFO]: ModLauncher 8.1.3+8.1.3+main-8.1.x.c94d18ec starting: java version 1.8.0_341 by Oracle Corporation
[18:52:47] [main/INFO]: Added Lets Encrypt root certificates as additional trust
[18:52:47] [main/INFO]: SpongePowered MIXIN Subsystem Version=0.8.4 Source=file:/C:/Users/%e5%bc%a0%e5%90%af/Desktop/.minecraft/libraries/org/spongepowered/mixin/0.8.4/mixin-0.8.4.jar Service=ModLauncher Env=CLIENT
[18:52:50] [main/INFO]: [org.antlr.v4.runtime.ConsoleErrorListener:syntaxError:38]: line 2:141 token recognition error at: ';'
[18:52:50] [main/INFO]: [org.antlr.v4.runtime.ConsoleErrorListener:syntaxError:38]: line 13:0 token recognition error at: '`'
Init CreativeCore coremods ...
[18:52:51] [main/ERROR]: Mixin config modernworldcreation.mixin.json does not specify "minVersion" property
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: org.spongepowered.asm.launch.MixinInitialisationError: Error initialising mixin config opotato.mixins.json
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.transformer.Config.create(Config.java:153)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.Mixins.createConfiguration(Mixins.java:100)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.Mixins.addConfiguration(Mixins.java:87)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.addConfig(MixinPlatformManager.java:262)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformAgentDefault.prepare(MixinPlatformAgentDefault.java:46)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinContainer.prepare(MixinContainer.java:122)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.createContainerFor(MixinPlatformManager.java:144)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.addContainer(MixinPlatformManager.java:134)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.addNestedContainers(MixinPlatformManager.java:152)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.scanForContainers(MixinPlatformManager.java:213)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.inject(MixinPlatformManager.java:186)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.MixinBootstrap.inject(MixinBootstrap.java:202)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.MixinLaunchPluginLegacy.initializeLaunch(MixinLaunchPluginLegacy.java:201)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.MixinLaunchPluginLegacy.initializeLaunch(MixinLaunchPluginLegacy.java:195)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchPluginHandler.lambda$announceLaunch$9(LaunchPluginHandler.java:97)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.util.HashMap.forEach(Unknown Source)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchPluginHandler.announceLaunch(LaunchPluginHandler.java:97)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchServiceHandler.launch(LaunchServiceHandler.java:52)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchServiceHandler.launch(LaunchServiceHandler.java:72)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.Launcher.run(Launcher.java:82)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.Launcher.main(Launcher.java:66)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: Caused by: java.lang.IllegalArgumentException: The requested compatibility level JAVA_11 could not be set. Level is not supported by the active JRE or ASM version (Java 1.8, ASM 9.1 (ASM10_EXPERIMENTAL))
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.MixinEnvironment.setCompatibilityLevel(MixinEnvironment.java:1570)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.transformer.MixinConfig.initCompatibilityLevel(MixinConfig.java:555)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.transformer.MixinConfig.postInit(MixinConfig.java:500)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.transformer.MixinConfig.onLoad(MixinConfig.java:428)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.transformer.MixinConfig.create(MixinConfig.java:1285)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.mixin.transformer.Config.create(Config.java:148)
[18:52:51] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	... 20 more
Exception in thread "main" 